public/css/page.css
html {
  color: black;
  font-size: 20px;
  font-family: "Sedgwick Ave", cursive;
  -webkit-font-smoothing: antialiased;
  text-rendering: geometricPrecision;
  line-height: 1.5;
  user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
}

body {
  display: flex;
  justify-content: center;
  background-color: darkgrey;
  background-image: url("../img/background/background.png");
}

header {
  display: block;
}

div#page {
  display: flex;
  flex-direction: column;
  width: 60rem;
  margin: 3rem 3rem;
  background-color: white;
  border: 2px solid black;
  box-shadow: 0px 0px 50px 10px black;
}

div.widget {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  position: relative;
  padding: 0.25rem;
}

div.fill {
  width: 100%;
}

header#main-header {
  height: 5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: slateblue;
}

header#main-header h1 {
  margin: 0;
}

header#content-header {
  height: 2.5rem;
  display: flex;
  align-items: center;
  padding-left: 1rem;
  background-image: linear-gradient(slateblue 15%, mediumslateblue);
}

header#content-header h3 {
  margin: 0;
}

div#main-content {
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
}

footer#main-footer {
  height: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: mediumslateblue;
}

footer#main-footer h3 {
  margin: 0;
  font-size: 15px;
}

